--- a/Proyecto Template parcial 3/css/style.css
+++ b/Proyecto Template parcial 3/css/style.css
@@ -1,88 +1,41 @@
 .icon1 {
 position: absolute;
-height: 52px;
 width: 52px;
-left: 47.64%;
-right: 47.64%;
-top: 0px;
-border-radius: 0px;
-border: 1px solid rgba(0, 0, 0, 1)
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+height: 52px;
+left: 650px;
+margin-top: -10px;
 }
-
-.text1{
-position: absolute;
-height: 16px;
-left: 16%;
-right: 92.91%;
-top: 19px;
-    
-font-family: Nunito;
-font-style: normal;
-font-weight: 800;
-font-size: 12px;
-line-height: 16,37px;
-letter-spacing: 3px;
-text-transform: uppercase;
-    
-color: #007FFF;
+.row1 {
+display: flex;
+justify-content: space-around;
+margin-top: 100px;
 }
-
-.text2{
-position: absolute;
-height: 16px;
-left: 24%;
-right: 96.91%;
-top: 20px;
-    
-font-family: Nunito;
-font-style: normal;
-font-weight: 800;
-font-size: 12px;
-line-height: 16px;
-letter-spacing: 3px;
-text-transform: uppercase;
-    
-color: #007FFF;
-}    
-
-.text3{
-position: absolute;
-height: 16px;
-left: 73.18%;
-right: 50.45%;
-top: 20px;
-    
-font-family: Nunito;
-font-style: normal;
-font-weight: 800;
-font-size: 12px;
-line-height: 16px;
-text-align: right;
-letter-spacing: 3px;
-text-transform: uppercase;
-    
-color: #007FFF;
+.container-titulo {
+justify-content: center;
+display: flex;
+margin-top: 100px;
 }
-
-.text4{
-position: absolute;
-height: 16px;
-left: 81.18%;
-right: 54.45%;
-top: 20px;
-    
-font-family: Nunito;
-font-style: normal;
-font-weight: 800;
-font-size: 12px;
-line-height: 16px;
-text-align: right;
-letter-spacing: 3px;
-text-transform: uppercase;
-    
-color: #007FFF;
+.titulo0 {
+margin-left: 70px;
 }
+.container-logos {
+display: flex;
+}
+.logosss {
+display: flex;
+margin-top: 20px;
+}        
+.logito1 {
+margin-left: 40em;    
+}
+.logito2 {
+margin-left: 20px;
+}
+.logito3 {
+margin-left: 20px;    
+}
+    
+    
 
 
 
